--- a/readme
+++ b/readme
@@ -1,3 +1,4 @@
 组员 160400209 刘轩 160400210 唐鑫 160400212 任芃锟 160400224 刘泽军
 文件： teachertree为主界面；add，select，introduce为功能界面；
        style为css样式设计，background为旧版本背景，暂时无用。
+       websql为服务器上的sql相关函数
